<resources>
    <string name="app_name">UPPTS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="auth_select_sign_up_secondary_text">New? Send it for an approval</string>
    <string name="auth_select_sign_up_primary_text">Already have an account?</string>
    <string name="sign_in_secondary_text">Welcome Back</string>
    <string name="sign_in_sign_up">Don\'t have an account? Signup</string>
    <string name="phone_number">Phone Number</string>
    <string name="otp">OTP</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign In</string>
    <string name="send_a_reminder">Send a reminder</string>
    <string name="attendance">Attendance</string>
    <string name="leave_application">Leave Application</string>
    <string name="leave_application_new_line">Leave \nApplication</string>
    <string name="hr_documents">HR Documents</string>
    <string name="expense_details">Expense Details</string>
    <string name="expense_details_new_line">Expense \nDetails</string>
    <string name="leave_type">Leave Type</string>
    <string name="total">Total</string>
    <string name="sick_leave">Sick Leave</string>
    <string name="casual_leave">Casual Leave</string>
    <string name="privilege_leave">Privilege Leave</string>
    <string name="balance_amount">Balance Amount</string>
    <string name="balance_details">Balance Details</string>
    <string name="amount">Amount</string>
    <string name="apply_for_leave">Apply for Leave</string>
    <string name="leave_policy">Leave Policy</string>
    <string name="appointment_letter">Appointment Letter</string>
    <string name="salary_slip">Salary Slip</string>
    <string name="increment_letter">Increment Letter</string>
    <string name="transfer_letter">Transfer Letter</string>
    <string name="remarks">Remarks</string>
    <string name="cash_worker">Outside Worker</string>
    <string name="worker_auto">Worker Auto</string>
    <string name="worker_food">Worker Food</string>
    <string name="engineer_food">Engineer Food</string>
    <string name="engineer_auto_cab">Engineer Auto/Cab</string>
    <string name="engineer_hotel">Engineer Hotel</string>
    <string name="worker_hotel">Worker Hotel</string>
    <string name="bus_train_fare">Bus/Train Fare</string>
    <string name="material_transportation">Material Transportation</string>
    <string name="petrol_diesel">Petrol/Diesel</string>
    <string name="printing_stationary">Printing/Stationary</string>
    <string name="other">Other</string>
    <string name="your_account_is_being_verified">Your account is being verified</string>
    <string name="back">Back</string>
    <string name="under_development">Under Development</string>
    <string name="leading">Leading</string>
    <string name="reason">Reason</string>
    <string name="installation_cr">Installation CR</string>
    <string name="stressing_cr">Stressing CR</string>
</resources>